Changed tasks 6 and 12

--- a/Practice4/Practice_4.ipynb
+++ b/Practice4/Practice_4.ipynb
@@ -207,11 +207,16 @@
         "def get_weather(weather_list: list[str]) -> dict:\n",
         "  if len(weather_list) != 7:\n",
         "    return None\n",
+        "  weather_count = {}\n",
         "\n",
-        "  res = {key: random.randrange(1,10) for key in weather_list}\n",
-        "  return res\n",
+        "  for weather in weather_list:\n",
+        "    if weather in weather_count:\n",
+        "      weather_count[weather] += 1\n",
+        "    else:\n",
+        "      weather_count[weather] = 1\n",
+        "  return weather_count\n",
         "\n",
-        "weather_list = ['sunny', 'rainy', 'clear', 'cloudy', 'windy', 'hot','snowy']\n",
+        "weather_list = ['sunny', 'rainy', 'windy', 'cloudy', 'windy', 'sunny','snowy']\n",
         "res = get_weather(weather_list)\n",
         "print(res)"
       ],
@@ -220,15 +225,15 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2075e39f-8d04-4a64-ed0e-3023ef547321"
+        "outputId": "c1f46146-09dd-4871-bd1a-ca5e6db983c7"
       },
-      "execution_count": 17,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'sunny': 2, 'rainy': 8, 'clear': 8, 'cloudy': 1, 'windy': 7, 'hot': 6, 'snowy': 1}\n"
+            "{'sunny': 2, 'rainy': 1, 'windy': 2, 'cloudy': 1, 'snowy': 1}\n"
           ]
         }
       ]
@@ -462,14 +467,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def division(a, b):\n",
-        "  if(b == 0): return None\n",
-        "  else: return a/b\n",
-        "\n",
-        "@message\n",
-        "def subtraction(a, b = 1):\n",
-        "  return a-b\n",
-        "\n",
         "def message(func):\n",
         "  def wrapper(*args, **kwargs):\n",
         "    print(\"Початок роботи\",func.__name__)\n",
@@ -478,12 +475,20 @@
         "    return res\n",
         "  return wrapper\n",
         "\n",
+        "def division(a, b):\n",
+        "  if(b == 0): return None\n",
+        "  else: return a/b\n",
+        "\n",
+        "@message\n",
+        "def subtraction(a, b = 1):\n",
+        "  return a-b\n",
+        "\n",
         "division = message(division)"
       ],
       "metadata": {
         "id": "06lj7eq_DwZe"
       },
-      "execution_count": 34,
+      "execution_count": 36,
       "outputs": []
     },
     {
