--- a/Practice6/Practice6.ipynb
+++ b/Practice6/Practice6.ipynb
@@ -35,7 +35,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Це спеціальня рядки, які містять в собі опис того, як працює певна функція. Використовується для написання коду в команді, аби кожен міг зрозуміти для чого використовується та чи інша функція та як вона працює"
+        "Це спеціальні рядки, які містять в собі опис того, як працює певна функція. Використовується для написання коду в команді, аби кожен міг зрозуміти для чого використовується та чи інша функція та як вона працює"
       ],
       "metadata": {
         "id": "_oqTO_30GlHj"
@@ -787,13 +787,17 @@
       "source": [
         "try:\n",
         "    print(1/0)\n",
-        "    b = [1,2,3]\n",
-        "    print(b[7])\n",
-        "    print(\"smth\"+6)\n",
         "except ZeroDivisionError:\n",
         "    print(\"Помилка: ділення на нуль\")\n",
+        "\n",
+        "try:\n",
+        "    b = [1,2,3]\n",
+        "    print(b[7])\n",
         "except IndexError:\n",
         "    print(\"Помилка: індекс за межами списку\")\n",
+        "\n",
+        "try:\n",
+        "    print(\"smth\"+6)\n",
         "except TypeError:\n",
         "    print(\"Помилка: неможливо об'єднати рядок і число\")"
       ],
@@ -802,15 +806,17 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "09a06539-1cd7-4812-9b14-342bf3af02c2"
+        "outputId": "22d79d7f-dc4a-4411-d3c0-6b8559a8422b"
       },
-      "execution_count": null,
+      "execution_count": 38,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Помилка: ділення на нуль\n"
+            "Помилка: ділення на нуль\n",
+            "Помилка: індекс за межами списку\n",
+            "Помилка: неможливо об'єднати рядок і число\n"
           ]
         }
       ]
